[package]
name = "aa_echo"
version = "0.1.0"
authors = ["Daichi Misaka <misaka6085@gmail.com>"]
edition = "2021"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "thread_echo"
path = "src/thread_echo.rs"

[[bin]]
name = "mio_echo"
path = "src/mio_echo.rs"

[[bin]]
name = "aa_echo"
path = "src/aa_echo.rs"

[dependencies]
libc = "0.2"

[dependencies.tokio]
version = "1.24.1"
features = ["full"]

[dependencies.mio]
version = "0.8.5"
features = ["os-poll", "net"]
